media queries to prevent word wrap of nav on even smaller screens like iPhone 4

--- a/5th.css
+++ b/5th.css
@@ -200,7 +200,7 @@ a:hover {
 
     #blubb header {
         position: relative;
-        top: 333px;
+        top: 323px;
         width: 125px;
         margin-bottom: 0;
         margin-left: auto;
@@ -211,7 +211,7 @@ a:hover {
     #blubb ul.links {
         display:block;
         position: relative;
-        top: 350px;
+        top: 340px;
         padding-bottom: 30px;
     }
 
@@ -219,6 +219,22 @@ a:hover {
         display:block;
         font-size: 40px;
         line-height: 1.2em;
+    }
+
+}
+
+@media screen and (max-width: 350px) {
+
+    #blubb ul.links li {
+        font-size: 33px;
+    }
+
+}
+
+@media screen and (max-width: 280px) {
+
+    #blubb ul.links li {
+        font-size: 25px;
     }
 
 }
